# masker

./: Cargo.toml  bootstrap_db.sh  schema.yaml
src/: db_pool_connector.rs  main.rs
src/database/: adapter.rs  error.rs  mod.rs  mysql_adapter.rs  shared.rs
src/database/mysql/: credentials.rs  error.rs  mod.rs  mysql_adapter.rs
src/masker/: database.rs  entity.rs  error.rs  field.rs  main.rs  mod.rs  schema.rs  schema_entry.rs
src/masker/error/: error.rs  mod.rs
src/masker/generator/: date.rs  error.rs  first_name.rs  generator.rs  iban.rs  last_name.rs  mod.rs  simple_generator.rs
src/masker/generator/address/: city.rs  country.rs  mod.rs  post_code.rs  state.rs  street.rs
src/masker/generator/from_template/: error.rs  generator.rs  mod.rs  token.rs
src/masker/transformer/: error.rs  first_name.rs  from_template.rs  last_name.rs  mod.rs  tranformer.rs  transformer.rs
src/masker/transformer/from_template/: error.rs  mod.rs  token.rs  transformer.rs
test_data/: mysqlsampledatabase.sql
