[package]
name = "masker"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.82"
fake = "2.9.2"
futures = "0.3.30"
iban = { version = "0.1.7", features = ["rand"] }
rand = "0.8.5"
regex = "1.10.6"
serde_yaml = "0.9.34"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "mysql"] }
tokio = { version = "1.40.0", features = ["full"] }
